--- a/Detectando_fraude.ipynb
+++ b/Detectando_fraude.ipynb
@@ -6,11 +6,29 @@
       "name": "Detectando_fraude.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "qCGtwcn3BEdp",
+        "nkN0nCzL-kV8",
         "-ZvXzpyqBAvX",
         "2ZJQdxfTCwzQ",
         "jl1lHsUqGJ3W",
+        "powAY1MATNuz",
+        "QCQ4RXztgoVa",
+        "IFOVBuEIgrUF",
+        "kK5OAoaBg8YZ",
+        "5oXaOVhnhD0S",
+        "rcPDGs6dhJCH",
+        "90fu-aKubSu7",
+        "AbC6_YZWiL8r",
+        "uY5G6nMcnUWM",
+        "I__hFkwInXPV",
+        "kFS-Rq2zne5-",
+        "Xd7Pr3MVtpYZ",
+        "ttxgPRWUxvXM",
         "ZRpYx6AvH4dr",
-        "XTniwhIlP6Hq"
+        "XTniwhIlP6Hq",
+        "h5FyDVH1Zfcc",
+        "6X7Q5Oj8xQZK",
+        "KS0JAJ5Q-rnK"
       ]
     },
     "kernelspec": {
@@ -3450,324 +3468,6 @@
           },
           "metadata": {},
           "execution_count": 33
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ONE HOTE ENCODING\n",
-        "\n",
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        "\n",
-        "ohe_pais = OneHotEncoder(handle_unknown='ignore')\n",
-        "ohe_pais.fit(fraude_df[['pais']])\n",
-        "temp_nomes = ohe_pais.get_feature_names_out()\n",
-        "temp_com_nomes = pd.DataFrame(ohe_pais.transform(fraude_df[['pais']]).toarray())\n",
-        "temp_com_nomes.columns = temp_nomes\n",
-        "temp_com_nomes.head()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 334
-        },
-        "id": "228x1uH7y69R",
-        "outputId": "6775b44f-1567-4607-a977-c385736178d1"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "   pais_Afghanistan  pais_Albania  pais_Algeria  pais_Angola  \\\n",
-              "0               0.0           0.0           0.0          0.0   \n",
-              "1               0.0           0.0           0.0          0.0   \n",
-              "2               0.0           0.0           0.0          0.0   \n",
-              "3               0.0           0.0           0.0          0.0   \n",
-              "4               0.0           0.0           0.0          0.0   \n",
-              "\n",
-              "   pais_Antigua and Barbuda  pais_Argentina  pais_Armenia  pais_Australia  \\\n",
-              "0                       0.0             0.0           0.0             0.0   \n",
-              "1                       0.0             0.0           0.0             0.0   \n",
-              "2                       0.0             0.0           0.0             0.0   \n",
-              "3                       0.0             0.0           0.0             0.0   \n",
-              "4                       0.0             0.0           0.0             0.0   \n",
-              "\n",
-              "   pais_Austria  pais_Azerbaijan  ...  pais_United States  pais_Uruguay  \\\n",
-              "0           0.0              0.0  ...                 0.0           0.0   \n",
-              "1           0.0              0.0  ...                 1.0           0.0   \n",
-              "2           0.0              0.0  ...                 1.0           0.0   \n",
-              "3           0.0              0.0  ...                 0.0           0.0   \n",
-              "4           0.0              0.0  ...                 1.0           0.0   \n",
-              "\n",
-              "   pais_Uzbekistan  pais_Vanuatu  pais_Venezuela  pais_Viet Nam  \\\n",
-              "0              0.0           0.0             0.0            0.0   \n",
-              "1              0.0           0.0             0.0            0.0   \n",
-              "2              0.0           0.0             0.0            0.0   \n",
-              "3              0.0           0.0             0.0            0.0   \n",
-              "4              0.0           0.0             0.0            0.0   \n",
-              "\n",
-              "   pais_Virgin Islands (U.S.)  pais_Yemen  pais_Zambia  pais_Zimbabwe  \n",
-              "0                         0.0         0.0          0.0            0.0  \n",
-              "1                         0.0         0.0          0.0            0.0  \n",
-              "2                         0.0         0.0          0.0            0.0  \n",
-              "3                         0.0         0.0          0.0            0.0  \n",
-              "4                         0.0         0.0          0.0            0.0  \n",
-              "\n",
-              "[5 rows x 182 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-1b120fab-8ee2-41c2-b26f-e54159217ed1\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>pais_Afghanistan</th>\n",
-              "      <th>pais_Albania</th>\n",
-              "      <th>pais_Algeria</th>\n",
-              "      <th>pais_Angola</th>\n",
-              "      <th>pais_Antigua and Barbuda</th>\n",
-              "      <th>pais_Argentina</th>\n",
-              "      <th>pais_Armenia</th>\n",
-              "      <th>pais_Australia</th>\n",
-              "      <th>pais_Austria</th>\n",
-              "      <th>pais_Azerbaijan</th>\n",
-              "      <th>...</th>\n",
-              "      <th>pais_United States</th>\n",
-              "      <th>pais_Uruguay</th>\n",
-              "      <th>pais_Uzbekistan</th>\n",
-              "      <th>pais_Vanuatu</th>\n",
-              "      <th>pais_Venezuela</th>\n",
-              "      <th>pais_Viet Nam</th>\n",
-              "      <th>pais_Virgin Islands (U.S.)</th>\n",
-              "      <th>pais_Yemen</th>\n",
-              "      <th>pais_Zambia</th>\n",
-              "      <th>pais_Zimbabwe</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5 rows × 182 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b120fab-8ee2-41c2-b26f-e54159217ed1')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-1b120fab-8ee2-41c2-b26f-e54159217ed1 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1b120fab-8ee2-41c2-b26f-e54159217ed1');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
         }
       ]
     },
